tests/ui/traits/suggest-impl-on-bare-trait-return.stderr
error[E0782]: expected a type, found a trait
  --> $DIR/suggest-impl-on-bare-trait-return.rs:4:13
   |
LL | fn fun() -> Trait {
   |             ^^^^^
   |
help: use `impl Trait` to return an opaque type, as long as you return a single underlying type
   |
LL | fn fun() -> impl Trait {
   |             ++++
help: alternatively, you can return an owned trait object
   |
LL | fn fun() -> Box<dyn Trait> {
   |             +++++++      +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0782`.
